objects/ssot__VehiclePerformanceSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetCategory__c</fullName>
        <label>Asset Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetPerformanceSummaryId__c</fullName>
        <label>Asset Performance Summary</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetUniqueId__c</fullName>
        <label>Asset Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BrakingEfficiency__c</fullName>
        <label>Braking Efficiency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CriticalEventCount__c</fullName>
        <label>Critical Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceTraveledNumber__c</fullName>
        <label>Distance Traveled</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceTraveledUomId__c</fullName>
        <label>Distance Traveled Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDateTime__c</fullName>
        <label>Effective End Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDateTime__c</fullName>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EngineEfficiency__c</fullName>
        <label>Engine Efficiency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FaultEventCount__c</fullName>
        <label>Fault Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelConsumedNumber__c</fullName>
        <label>Fuel Consumed</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelConsumedUomId__c</fullName>
        <label>Fuel Consumed Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelEfficiencyNumber__c</fullName>
        <label>Fuel Efficiency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelEfficiencyUomId__c</fullName>
        <label>Fuel Efficiency Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Performance Summary Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatorViolationCount__c</fullName>
        <label>Operator Violation Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftCount__c</fullName>
        <label>Shift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TelematicsProviderId__c</fullName>
        <label>Telematics Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleId__c</fullName>
        <label>Vehicle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761232502_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehiclePerformanceSummary_AssetId_ma_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>VehiclePerformanceSummary_AssetId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761232502_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761232574_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehiclePerformanceSummary_DistanceTr_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehiclePerformanceSummary_DistanceTr_rel</relationshipLabel>
        <relationshipName>rel_1697761232574_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761232639_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehiclePerformanceSummary_FuelConsum_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehiclePerformanceSummary_FuelConsum_rel</relationshipLabel>
        <relationshipName>rel_1697761232639_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>